--- a/index.html
+++ b/index.html
@@ -5,30 +5,61 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js">
+    <link rel="stylesheet" ng-href="https://bootswatch.com/cosmo/bootstrap.min.css">
     </script>
     <script src="app.js"></script>
 </head>
 
 <body ng-controller="MainController">
-    <h1>School</h1>
+    <h2>Back to School</h2>
     <button ng-click="clickTeachers()">Find all teachers</button>
     <button ng-click="clickStudents()">Find all students</button>
-    <button>Find all classes</button>
-    <input></input>
+    <button ng-click="clickClasses()">Find all classes</button>
+
+<div>
+    <h3>Create a teacher</h1>
+    <form novalidate>
+        Name:<br>
+        <input type="text" ng-model="user.name"><br> Email:<br>
+        <input type="text" ng-model="user.email">
+        <br><br>
+        <button ng-submit="createTeacher()">create</button>
+    </form>
+</div>
+
+<div>
+    <h3>Create a student</h1>
+    <form>
+        Name:<br>
+        <input type="text" ng-model="student.name"><br> 
+        Email:<br>
+        <input type="text" ng-model="student.email"><br>
+        Classes:<br>
+        <input type="text" ng-model="student.classes">
+        <br>
+        <button ng-click="createStudent()">create</button>
+    </form>
+</div>
+    
+    <div ng-show="showTeachers">
     <div ng-repeat="teacher in teachers">
         <div>{{ teacher._id }}</div>
         <div>{{ teacher.name }}</div>
         <div>{{ teacher.email }}</div>
     </div>
+    </div>
+    <div ng-show="showStudents">
     <div ng-repeat="student in students">
         <div>{{ student._id }}</div>
         <div>{{ student.name }}</div>
         <div>{{ student.email }}</div>
     </div>
-     <div ng-repeat="class in classes">
-        <div>{{ classes._id }}</div>
-        <div>{{ classes.name }}</div>
-        <div>{{ classes.email }}</div>
     </div>
+        <div ng-show="showClasses">
+        <div ng-repeat="class in classes">
+        <div>{{ class.code }}</div>
+        <div>{{ class.name }}</div>
+    </div>
+    </div> 
 </body>
 </html>
